Fixed issue with details page z-index.

--- a/src/DetailsPage/DetailsPage.css
+++ b/src/DetailsPage/DetailsPage.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    z-index: -1;
     gap: 1em;
 }
 
